Scaffold controllers and views, connect database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PizzaStore-74c07151-c9a7-403e-9269-c9de2ec9d6e6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:slice-of-heaven.database.windows.net,1433;Initial Catalog=pizzaDatabase;Persist Security Info=False;User ID=socAdmin;Password=o*W4tPh0Q42OaSVT;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
