Commit before adding Google cloud auth

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "Client Id": "335987972244-u4kdqf4ped6987d2lcuo3us8vnple83f.apps.googleusercontent.com",
+      "Client Secret": "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"
+    }
+  }
 }
